# cdl-wind

./: .gitignore  README.md  clean_names.py  file_index.json  gemini.py  index.py  main-t.py  main.py  parser.py  prompt.txt  prompt1.txt  pyproject.toml  sample-mapping.json
prompts-instructions/: instruction.txt  new-prompt-extraction-rd1.txt  prompt.txt  prompt1.txt
tests/: test_index.py
