[project]
name = "CDLAntiWind"
author = "Carlos Paniagua"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.10.0",
    "json-repair>=0.46.2",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]
